--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 
 <body>
 
+<div class="pageContainer">
   <header>
     <nav class="headerNav">
       <a href="#">Plan your Visit</a>
-      <a href="#">Learn about the Park</a>
+      <a href="#">Learn About the Park</a>
       <a href="#">Get Involved</a>
     </nav>
-  
+
     <div class="headerImage">
       <img src="C:\Users\Serge\Desktop\LAMBDA\!unit1\week1\Module 3 Project\web-module-project-intro-css\assets\header_img.jpg">
     </div>
@@ -25,35 +26,36 @@
       <p>Always open. Reservations are not available or required to enter the park.</p>
     </div>
   </header>
-  
+
   <body>
     <div class="bodyPart1">
       <p>Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p>
       <p>First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly 1,200 square miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much more.</p>
     </div>
-  
+
     <div class="bodyPart2">
       <img src="https://image.flaticon.com/icons/svg/2979/2979348.svg">
       <p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for current fire restrictions.</p>
     </div>
-  
+
     <div class="bodyPart3">
       <img src="https://image.flaticon.com/icons/svg/820/820374.svg">
       <p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the park entrance fee upon arrival (there's no need to pay it in advance).</p>
     </div>
   </body>
-  
+
   <footer>
     <div class="footerImage">
       <img src="C:\Users\Serge\Desktop\LAMBDA\!unit1\week1\Module 3 Project\web-module-project-intro-css\assets\footer_img.jpg">
     </div>
-  
+
     <nav class="footerNav">
       <a href="#">Plan your Visit</a>
-      <a href="#">Learn about the Park</a>
+      <a href="#">Learn About the Park</a>
       <a href="#">Get Involved</a>
     </nav>
   </footer>
+</div>
       
 </body>
 
