--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     
     <div class="headerMessage">
-      <h1>Yosemite Park Guide</h>
+      <h1>Yosemite Park Guide</h1>
       <p>Come explore California’s beautiful wilderness.</p>
       <p>Always open. Reservations are not available or required to enter the park.</p>
     </div>
